--- a/coastr/package.json
+++ b/coastr/package.json
@@ -12,14 +12,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bcrypt": "^3.0.5",
+    "bootstrap": "^4.4.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "fontawesome": "^5.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1",
+    "node-sass": "^4.13.1",
     "nodemon": "^2.0.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
