--- a/coastr/package.json
+++ b/coastr/package.json
@@ -26,6 +26,7 @@
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "semantic-ui-react": "^0.88.2",
     "react-scripts": "3.4.1",
     "serve-favicon": "^2.5.0",
     "typescript": "^3.8.3"
